<resources>
    <string name="app_name">InsuCalc</string>
    <string name="calc_value">Insulin Value</string>
    <string name="TBS_Hint">E.g. 8.0</string>
    <string name="ICR_Hint">E.g. 9.0</string>
    <string name="DIA_Hint">E.g. 37.0</string>
    <string name="CV_Hint">E.g. 67.45</string>
    <string name="CBS_Hint">E.g. 7.5</string>
    <string name="calculate_insulin_dose">Calculate Insulin Dose</string>
    <string name="simulate">Simulate</string>
    <string name="ITR_Text">Insulin to Carbohydrate Ratio</string>
    <string name="CV_Text">Carbohydrate Value</string>
    <string name="DIA_Text">Daily Total Insulin</string>
    <string name="TBS_Text">Target Blood Sugar</string>
    <string name="CBS_Text">Current Blood Sugar</string>
    <string name="calcval_Dummy">0.0</string>
</resources>
